- fast queue feature (bug in immediate start queue)